--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ matrix:
   allow_failures:
     - python: "pypy"
 install: pip install coveralls
-script: coverage run --branch --source=ic 'python -m unittest discover'
+script: coverage run --branch --source=ic -m unittest discover
 after_success: coveralls
