--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
   - "3.2"
   - "3.3"
   - "pypy"
+  - "pypy3"
 matrix:
   allow_failures:
     - python: "pypy"
+    - python: "pypy3"
 install: pip install coveralls
 script: coverage run --branch --source=ic -m unittest discover
 after_success: coveralls
