--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,29 +19,25 @@ jobs:
           - "3.9"
           - "3.10"
           - "pypy2.7"
-          - "pypy3.6"
           - "pypy3.7"
           - "pypy3.8"
           - "pypy3.9"
         include:
           - python: "3.2"
             os: windows-latest
-            experimental: true
           - python: "3.3"
             os: windows-latest
-            experimental: true
           - python: "3.5"
             os: ubuntu-20.04
             experimental: true
           - python: "3.5"
             os: windows-latest
-            experimental: true
           - python: "3.6"
             os: ubuntu-20.04
-            experimental: true
           - python: "3.6"
             os: windows-latest
-            experimental: true
+          - python: "pypy3.6"
+            os: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
