--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,13 @@ jobs:
           - "3.8"
           - "3.9"
           - "3.10"
+          - "3.11"
+          - "3.12"
           - "pypy2.7"
           - "pypy3.7"
           - "pypy3.8"
           - "pypy3.9"
+          - "pypy3.10"
         include:
           - python: "3.2"
             os: windows-latest
