--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,7 @@ jobs:
       run: coveralls --service=github
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        COVERALLS_FLAG_NAME: ${{ matrix.python }}
+        COVERALLS_FLAG_NAME: ${{ matrix.python }}-${{ matrix.os == 'windows-latest' && 'w' || 'l' }}
         COVERALLS_PARALLEL: true
 
   finish:
